--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,18 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    // Подключение плагина для работы с аннотациями (нужно для Room)
+    id 'kotlin-kapt'
+    // Подключение плагина для удобной парселизации
+    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "31.0.0"
 
     defaultConfig {
-        applicationId "ru.geekbrains.popular.libraries.secondsmeasuring"
-        minSdkVersion 25
+        applicationId "ru.geekbrains.popular.libraries.less_1_homework"
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -30,16 +33,82 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // Добавили разрешение на использование Binding
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //AndroidX
+    implementation libs.androidX.appcompat
+    //Kotlin
+    implementation libs.kotlin.ktx
+    implementation libs.kotlin.jdk7
+    implementation libs.kotlin.coroutinescore
+    implementation libs.kotlin.coroutinesandroid
+    //Design
+    implementation libs.design.material
+    implementation libs.design.constrlayout
+/*    // Test
+    testImplementation libs.tests.junit
+    androidTestImplementation libs.tests.runner
+    androidTestImplementation libs.tests.espressocore
+    implementation fileTree(dir: libs.tests.filetreedir, include: libs.tests.filetreeinclude) */
+    // Lifecycle
+    implementation libs.lifecycle.extensions
+    // LiveData
+    implementation libs.lifecycle.ktx
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation libs.lifecycle.runtimektx
+    implementation libs.lifecycle.process
+    implementation libs.lifecycle.java8
+/*    // Moxy
+    implementation libs.moxy.community
+    kapt libs.moxy.compiler
+    implementation libs.moxy.ktx
+    implementation libs.moxy.androidx */
+/*    // Cicerony
+    implementation libs.cicerony.runtime */
+    // RxJava
+    implementation libs.rxJava.android
+    implementation libs.rxJava.reactive
+/*    // Glide
+    implementation libs.glide.runtime
+    kapt libs.glide.compiler */
+/*    // OkHTTP
+    implementation libs.okHTTP.runtime */
+    // Retrofit
+    implementation libs.retrofit.runtime
+    implementation libs.retrofit.gson
+    implementation libs.retrofit.rxJava2
+//    implementation libs.retrofit.rxJava3 // одновременно с rxJava2 не включать
+    implementation libs.retrofit.interceptor
+/*    // Room
+    implementation libs.room.runtime
+    kapt libs.room.compiler
+    kapt libs.room.m1Support
+    implementation libs.room.rxJava3 */
+    // Coroutines
+    implementation libs.coroutines.android
+    // Dagger
+    implementation libs.dagger.daggger
+    implementation libs.dagger.runtime
+    implementation libs.dagger.support
+    kapt libs.dagger.processor
+    kapt libs.dagger.compiler
+    kapt libs.dagger.addsupport
+    // Koin
+    //Koin core features
+    implementation libs.koin.core
+    //Koin main features for Android (Scope,ViewModel ...)
+    implementation libs.koin.android
+    //Koin Java Compatibility
+    implementation libs.koin.compat
+    // For Retrofit 2 coroutines
+    implementation libs.koin.retrofitcoroutines
+    // Koin for Tests
+    testImplementation libs.koin.testsandroidx
+    testImplementation libs.koin.testsio
 }
