--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Подключение файла "dependencies.gradle"
+subprojects {
+    apply(from: "/dependencies.gradle")
+}
