--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SecondsMeasuring">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true"> <!--Нужно для устранения ошибки: Manifest merger failed : Apps targeting Android 12 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
