Выполнен 2 пункт ДЗ: Выбрано приложение "Секундомер" и для него добавлены несколько Unit-тестов
Для класса TimestampMillisecondsFormatter добавлено 4 теста по проверке корректности вывода времени.

Ссылка на репозиторий:
https://github.com/AVKhakhalin/SecondsMeasuring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,12 @@ dependencies {
     //Design
     implementation libs.design.material
     implementation libs.design.constrlayout
-/*    // Test
+    // Test
     testImplementation libs.tests.junit
-    androidTestImplementation libs.tests.runner
+    androidTestImplementation libs.tests.extjunit
+//    androidTestImplementation libs.tests.runner
     androidTestImplementation libs.tests.espressocore
-    implementation fileTree(dir: libs.tests.filetreedir, include: libs.tests.filetreeinclude) */
+    //implementation fileTree(dir: libs.tests.filetreedir, include: libs.tests.filetreeinclude)
     // Lifecycle
     implementation libs.lifecycle.extensions
         // LiveData
