--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -7,6 +7,7 @@ def kotlinCoroutineandroidVersion = "1.5.0"
 def designMaterialVersion = "1.4.0"
 def designConstrlayoutVersion = "2.1.1"
 def testJunitVersion = "4.12"
+def testExtJunitVersion = "1.1.2"
 def testRunnerVersion = "1.2.0"
 def testEspressocoreVersion = "3.2.0"
 def roomVersion = "2.4.0"
@@ -57,6 +58,7 @@ ext {
     tests = [:]
     libs.tests = tests
     tests.junit = "junit:junit:$testJunitVersion"
+    tests.extjunit = "androidx.test.ext:junit:$testExtJunitVersion"
     tests.runner = "androidx.test:runner:$testRunnerVersion"
     tests.espressocore = "androidx.test.espresso:espresso-core:$testEspressocoreVersion"
     tests.filetreedir = "'libs'"
